Add CheckRole middleware to make access for
