# api/routes/api.php
@@ -17,7 +17,13 @@ Route::group(['prefix' => 'auth'], function () {
 });
 
 // Protected routes
-Route::apiResource('books', BookController::class);
-Route::apiResource('categories', CategoryController::class);
-Route::apiResource('users', UserController::class);
-Route::get('categories/{id}/books', [CategoryController::class, 'getBooks']); 
+Route::middleware('auth:api')->group(function () {
+    Route::apiResource('books', BookController::class);
+    Route::apiResource('categories', CategoryController::class);
+    Route::get('categories/{id}/books', [CategoryController::class, 'getBooks']);
+    
+    // Admin-only routes
+    Route::middleware('role:admin')->group(function () {
+        Route::apiResource('users', UserController::class);
+    });
+}); 
